编写重构计划

--- a/docs/关于历史管理的重构的想法记录.md
+++ b/docs/关于历史管理的重构的想法记录.md
@@ -5,4 +5,77 @@
 解决：
     1、首先我想的是队列+字典+数据库，这个是整个数据结构的基调，或许后续会根据实际开发方便，性能优化，加入数据表、结构体、类什么的。
     2、数据库，顾名思义为了管理数据持久化，每次插入新的数据，就同步一份数据到数据库之中，而考虑到后续高并发的问题，并开发难度，选择MySQL。
-    3、接着我们字典替换JSON文件的管理，虽然内存的占用变高了，但是速度是成倍变快。字典和JSON的格式相差无几
+    3、接着我们需要使用新的数据结构，核心思路是每次新的消息进入，先计算单个他的token，接着加到总token上，接着就看，他有没有超出上限，如果超出，先从数组的第零号位开始遍历，依次去见总token，逐渐减到总token，没有超过上限，接着我们看数据遍历到了哪一位，比如遍历到了第三位，那我们就删除下标0~2的数据，接着删除数组对应位置的历史消息。最后在字典和数组末尾插入新消息。
+    4、关于多AI的兼容策略，我们首先想到的是
+
+数据格式：
+    外层容器（统一）：
+        sessions: Dict[str, SessionData] = {
+            "session_001": SessionData(...),
+            "session_002": SessionData(...),
+        }
+        查询复杂度：O(1)
+    
+    方案A：类 + 继承
+        class SessionData:
+            session_id: str
+            token_counts: list[int]
+            total_tokens: int
+            def add_message(self, role, content): ...
+            def to_request(self) -> dict: ...
+        
+        class OpenAISession(SessionData):
+            messages: list[dict]  # [{role, content}, ...]
+            model: str
+            temperature: float
+        class ClaudeSession(SessionData): ...
+        class GeminiSession(SessionData): ...
+    
+    方案B：纯字典
+        {
+            "session_id": "xxx",
+            "ai_type": "openai",
+            "request_data": {
+                "model": "gpt-4",
+                "messages": [...],
+                ...
+            },
+            "token_counts": [100, 50, 200],
+            "total_tokens": 350
+        }
+    
+    方案C：dataclass + 适配器
+        @dataclass
+        class Message:
+            role: str
+            content: str
+        
+        @dataclass
+        class SessionData:
+            session_id: str
+            messages: list[Message]  # 统一格式，与AI无关
+            token_counts: list[int]
+            total_tokens: int
+        
+        class AIAdapter:
+            def to_request(self, session: SessionData) -> dict: ...
+            def from_response(self, response) -> Message: ...
+        
+        class OpenAIAdapter(AIAdapter): ...
+        class ClaudeAdapter(AIAdapter): ...
+    
+    方案D：不可变数据结构
+        @dataclass(frozen=True)
+        class SessionData:
+            session_id: str
+            messages: tuple[Message, ...]
+            token_counts: tuple[int, ...]
+            total_tokens: int
+            
+            def add_message(self, msg, tokens) -> SessionData:
+                return SessionData(
+                    session_id=self.session_id,
+                    messages=self.messages + (msg,),
+                    token_counts=self.token_counts + (tokens,),
+                    total_tokens=self.total_tokens + tokens
+                )
