修改OpenAI类的封装

--- a/docs/关于历史管理的重构的想法记录.md
+++ b/docs/关于历史管理的重构的想法记录.md
@@ -72,3 +72,4 @@
                     token_counts=self.token_counts + (tokens,),
                     total_tokens=self.total_tokens + tokens
                 )
+                结果：已完成
